--- a/ChessApp/templates/show_entries.html
+++ b/ChessApp/templates/show_entries.html
@@ -1,21 +1,50 @@
 {% extends "layout.html" %}
 {% block body %}
-  {% if session.logged_in %}
-    <form action="{{ url_for('add_entry') }}" method="post" class="add-entry">
-      <dl>
-        <dt>Title:
-        <dd><input type="text" size="30" name="title">
-        <dt>Text:
-        <dd><textarea name="text" rows="5" cols="40"></textarea>
-        <dd><input type="submit" value="Share">
-      </dl>
-    </form>
-  {% endif %}
-  <ul class="entries">
-  {% for entry in entries %}
-    <li><h2>{{ entry.gid }}</h2>{{ entry.Event|safe }}
-  {% else %}
-    <li><em>Unbelievable.  No entries here so far</em>
-  {% endfor %}
-  </ul>
+    {% if session.logged_in %}
+        <form action="{{ url_for('add_entry') }}" method="post" class="add-entry">
+            <dl>
+                <dt>Title:
+                <dd><input type="text" size="30" name="title">
+                <dt>Text:
+                <dd><textarea name="text" rows="5" cols="40"></textarea>
+                <dd><input type="submit" value="Share">
+            </dl>
+        </form>
+    {% endif %}
+    {% if entries %}
+        <table style="width:100%" class="entries">
+            <tr>
+                <th>Date</th>
+                <th>White</th>   
+                <th>Black</th>
+                <th>W ELO</th>
+                <th>B ELO</th>
+                <th>Event</th>
+                <th>Site</th>
+                <th>ECO</th>
+                <th>Opening</th>
+                <th>Round</th>
+                <th>Res</th>
+                <th># Mvs</th>
+            </tr>
+            {% for game in entries %}
+            <tr>
+                <td>{{ game.Date }}</td>
+                <td>{{ game.White }}</td>
+                <td>{{ game.Black }}</td>
+                <td>{{ game.WhiteElo }}</td>
+                <td>{{ game.BlackElo }}</td>
+                <td>{{ game.Event }}</td>
+                <td>{{ game.Site }}</td>
+                <td>{{ game.ECO }}</td>
+                <td>{{ game.Opening }} ({{ game.Variation}})</td>
+                <td>{{ game.Round }}</td>
+                <td>{{ game.Result }}</td>
+                <td>{{ game.number_of_moves }}</td>
+            </tr>   
+            {% endfor %}   
+        </table>
+    {% else %}
+        <em>Search didn't match any games.</em>
+    {% endif %}
 {% endblock %}
