--- a/ChessDBApp/templates/game_explorer.html
+++ b/ChessDBApp/templates/game_explorer.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
     <h2>Find Games:</h2>
-    <form action="{{ url_for('find_games') }}" method="post">
+    <form action="{{ url_for('game_explorer') }}" method="post">
         <dl>
             <dt>ELO:</dt>
             <dd> 
@@ -47,5 +47,39 @@
             <dd><input type="submit" value="Find games">
         </dl>
     </form>
+    {% if entries %}
+        <table style="width:100%" class="entries">
+            <tr>
+                <th>Date</th>
+                <th>White</th>   
+                <th>Black</th>
+                <th>W ELO</th>
+                <th>B ELO</th>
+                <th>Event</th>
+                <th>Site</th>
+                <th>ECO</th>
+                <th>Opening</th>
+                <th>Round</th>
+                <th>Res</th>
+                <th># Mvs</th>
+            </tr>
+            {% for game in entries %}
+            <tr>
+                <td>{{ game.Date }}</td>
+                <td>{{ game.White }}</td>
+                <td>{{ game.Black }}</td>
+                <td>{{ game.WhiteElo }}</td>
+                <td>{{ game.BlackElo }}</td>
+                <td>{{ game.Event }}</td>
+                <td>{{ game.Site }}</td>
+                <td>{{ game.ECO }}</td>
+                <td>{{ game.Opening }} ({{ game.Variation}})</td>
+                <td>{{ game.Round }}</td>
+                <td>{{ game.Result }}</td>
+                <td>{{ game.number_of_moves }}</td>
+            </tr>   
+            {% endfor %}   
+        </table>
+    {% endif %}
 {% endblock %}
 
