got games into the viewer

--- a/ChessDBApp/templates/game_explorer.html
+++ b/ChessDBApp/templates/game_explorer.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-    <h2>Find Games:</h2>
+    <h2>Game Explorer</h2>
     <form action="{{ url_for('game_explorer') }}" method="post">
         <dl>
             <dt>ELO:</dt>
@@ -50,6 +50,7 @@
     {% if entries %}
         <table style="width:100%" class="entries">
             <tr>
+                <th>View</th>
                 <th>Date</th>
                 <th>White</th>   
                 <th>Black</th>
@@ -65,6 +66,12 @@
             </tr>
             {% for game in entries %}
             <tr>
+                <td>
+                    <form action="{{ url_for('pgn_viewer') }}" method="post">
+                        <input type="number" name="gid" value="{{game.gid}}" hidden>
+                        <input type="submit" value="view">
+                    </form>
+                </td>
                 <td>{{ game.Date }}</td>
                 <td>{{ game.White }}</td>
                 <td>{{ game.Black }}</td>
