--- a/ChessDBApp/static/style.css
+++ b/ChessDBApp/static/style.css
@@ -1,26 +1,36 @@
 body            { font-family: sans-serif; background: #eee; }
-a, h1, h2       { color: #377BA8; }
-h1, h2          { font-family: 'Georgia', serif; margin: 0; }
+a, h1, h2, h3   { color: #377BA8; }
+h1, h2, h3      { font-family: 'Georgia', serif; margin: 0; }
 h1              { border-bottom: 2px solid #eee; }
 h2              { font-size: 1.2em; }
 
-.page           { margin: 2em auto; width: 35em; border: 5px solid #ccc;
+ul.nav          { background:  white; margin: 3em auto; width: 90%;  border: 3px solid #ccc;
+	              list-style-type:none; padding: 0em 0.8em; overflow:hidden; }
+li.nav          { width:33%; float:left; }
+a:link.nav,
+a:visited.nav   { display:block; text-align:center;
+                  padding:10px 10px 10px 10px; text-decoration:none; }
+a:hover.nav,
+a:active.nav    { font-weight:bold; padding:10px 10px 10px 10px; }
+
+.page           { margin: 2em auto; width: 90%; border: 5px solid #ccc;
                   padding: 0.8em; background: white; }
+
 .entries        { list-style: none; margin: 0; padding: 0; }
 .entries li     { margin: 0.8em 1.2em; }
 .entries li h2  { margin-left: -1em; }
+
 .add-entry      { font-size: 0.9em; border-bottom: 1px solid #ccc; }
 .add-entry dl   { font-weight: bold; }
-.metanav        { text-align: right; font-size: 0.8em; padding: 0.3em;
-                  margin-bottom: 1em; background: #fafafa; }
+
+.metanav        { text-align: right; font-size: 0.9em; padding: 0.4em;
+                  margin-bottom: 1em; background: #aaaaaa; }
+.metanav a      { padding:10px 10px 10px 10px; }
+
 .flash          { background: #CEE5F5; padding: 0.5em;
                   border: 1px solid #AACBE2; }
+
 .error          { background: #F0D6D6; padding: 0.5em; }
 
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 5px;
-}
+table, th, td   { border: 1px solid black; border-collapse: collapse; }
+th, td          { padding: 5px; }
