--- a/ChessDBApp/templates/collection_explorer.html
+++ b/ChessDBApp/templates/collection_explorer.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
   <h2>Your Collections</h2>
-  <form action="{{ url_for('login') }}" method="post">
+  <form action="{{ url_for('collection_explorer') }}" method="post">
     <dl>
       <dt>Collection name:
       <dd><input type="text" name="collection_name" maxlength="50" size="50" required>
