--- a/ChessDBApp/templates/game_explorer.html
+++ b/ChessDBApp/templates/game_explorer.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
 {% block body %}
-    <h2>Find Games:</h2>
+    <h2>Game Explorer</h2>
     <form action="{{ url_for('game_explorer') }}" method="post">
+        <fieldset>
+        <legend>Search Criteria:</legend>
         <dl>
             <dt>ELO:</dt>
             <dd> 
@@ -46,8 +48,10 @@
 
             <dd><input type="submit" value="Find games">
         </dl>
+        </fieldset>
     </form>
     {% if entries %}
+        <br>
         <table style="width:100%" class="entries">
             <tr>
                 <th>Date</th>
