worked on collection_explorer

--- a/ChessDBApp/templates/collection_explorer.html
+++ b/ChessDBApp/templates/collection_explorer.html
@@ -1,15 +1,58 @@
 {% extends "layout.html" %}
 {% block body %}
-  <h2>Your Collections</h2>
-  <form action="{{ url_for('collection_explorer') }}" method="post">
-    <dl>
-      <dt>Collection name:
-      <dd><input type="text" name="cname" maxlength="50" size="50" required>
-      <dt>Description:
-      <dd><textarea name="description" rows="5" cols="40" maxlength="150"></textarea>
-      <dt>Tag:
-      <dd><input type="text" name="tag" maxlength="20" size="30">
-      <dd><input type="submit" value="Create new collection">
-    </dl>
-  </form>
+    <h2>Your Collections</h2>
+    <form action="{{ url_for('collection_explorer') }}" method="post">
+        <dl>
+            <dt>Collection name:
+            <dd><input type="text" name="cname" maxlength="50" size="50" required>
+            <dt>Description:
+            <dd><textarea name="description" rows="5" cols="40" maxlength="150"></textarea>
+            <dt>Tag:
+            <dd><input type="text" name="tag" maxlength="20" size="30">
+            <dd><input type="submit" value="Create new collection">
+        </dl>
+    </form>
+    <br>
+    {% if entries %}
+        <table style="width:100%" class="entries">
+            <tr>
+                <th>View</th>
+                <th>Date</th>
+                <th>White</th>   
+                <th>Black</th>
+                <th>W ELO</th>
+                <th>B ELO</th>
+                <th>Event</th>
+                <th>Site</th>
+                <th>ECO</th>
+                <th>Opening</th>
+                <th>Round</th>
+                <th>Res</th>
+                <th># Mvs</th>
+            </tr>
+            {% for game in entries %}
+            <tr>
+                <td>
+                    <form action="{{ url_for('pgn_viewer') }}" method="post">
+                        <input type="number" name="gid" value="{{game.gid}}" hidden>
+                        <input type="submit" value="view">
+                    </form>
+                </td>
+                <td>{{ game.Date }}</td>
+                <td>{{ game.White }}</td>
+                <td>{{ game.Black }}</td>
+                <td>{{ game.WhiteElo }}</td>
+                <td>{{ game.BlackElo }}</td>
+                <td>{{ game.Event }}</td>
+                <td>{{ game.Site }}</td>
+                <td>{{ game.ECO }}</td>
+                <td>{{ game.Opening }} ({{ game.Variation}})</td>
+                <td>{{ game.Round }}</td>
+                <td>{{ game.Result }}</td>
+                <td>{{ game.number_of_moves }}</td>
+            </tr>   
+            {% endfor %}   
+        </table>
+    {% You have not created any collections yet. %}
+    {% endif %}
 {% endblock %}
