--- a/ChessDBApp/templates/collection_explorer.html
+++ b/ChessDBApp/templates/collection_explorer.html
@@ -13,46 +13,19 @@
         </dl>
     </form>
     <br>
-    {% if entries %}
-        <table style="width:100%" class="entries">
-            <tr>
-                <th>View</th>
-                <th>Date</th>
-                <th>White</th>   
-                <th>Black</th>
-                <th>W ELO</th>
-                <th>B ELO</th>
-                <th>Event</th>
-                <th>Site</th>
-                <th>ECO</th>
-                <th>Opening</th>
-                <th>Round</th>
-                <th>Res</th>
-                <th># Mvs</th>
-            </tr>
-            {% for game in entries %}
-            <tr>
-                <td>
-                    <form action="{{ url_for('pgn_viewer') }}" method="post">
-                        <input type="number" name="gid" value="{{game.gid}}" hidden>
-                        <input type="submit" value="view">
-                    </form>
-                </td>
-                <td>{{ game.Date }}</td>
-                <td>{{ game.White }}</td>
-                <td>{{ game.Black }}</td>
-                <td>{{ game.WhiteElo }}</td>
-                <td>{{ game.BlackElo }}</td>
-                <td>{{ game.Event }}</td>
-                <td>{{ game.Site }}</td>
-                <td>{{ game.ECO }}</td>
-                <td>{{ game.Opening }} ({{ game.Variation}})</td>
-                <td>{{ game.Round }}</td>
-                <td>{{ game.Result }}</td>
-                <td>{{ game.number_of_moves }}</td>
-            </tr>   
-            {% endfor %}   
-        </table>
-    {% You have not created any collections yet. %}
-    {% endif %}
+    <ul class="entries">
+        {% for collection in collections %}
+        <li>
+            <h2>
+                <a href="{{ url_for('show_collection_games',cid=collection.cid) }}">
+                    {{ collection.cname|safe }}
+                </a>
+            </h2>
+            {{ collection.description|safe }}<br>
+            {{ collection.tag|safe }}
+        </li>
+        {% else %}
+        <li><em>You have not created any collections yet.</em>
+        {% endfor %}
+    </ul>
 {% endblock %}
