preparing to merge

--- a/ChessDBApp/templates/collection_explorer.html
+++ b/ChessDBApp/templates/collection_explorer.html
@@ -53,6 +53,7 @@
             </tr>   
             {% endfor %}   
         </table>
-    {% You have not created any collections yet. %}
+    {% else %}
+    <em>You have not created any collections yet.<em>
     {% endif %}
 {% endblock %}
