--- a/ChessDBApp/templates/game_explorer.html
+++ b/ChessDBApp/templates/game_explorer.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
     <h2>Game Explorer</h2>
-    <form action="{{ url_for('game_explorer') }}" method="post">
+    <form action="{{ url_for('game_explorer') }}" id="game_explorer_form" method="post">
         <fieldset>
         <legend>Search Criteria:</legend>
         <dl>
@@ -25,20 +25,20 @@
 
             <dt>White Player:</dt>
             <dd>
-                <input list="white_player" name="white_player"> 
-                <datalist id="white_player" size="15">
-                    <option value="Internet Explorer">
-                    <option value="Firefox">
-                </datalist> 
+                <select name="white_player" form="game_explorer_form">
+                {% for player in white_players %}       
+                    <option value="{{player.name}}" size="15">{{player.name}}</option>   
+                {% endfor %} 
+                </select>   
             </dd>
 
             <dt>Black Player:</dt>
             <dd>
-                <input list="black_player" name="black_player">
-                <datalist id="black_player" size="15">
-                    <option value="Internet Explorer">
-                    <option value="Firefox">
-                </datalist> 
+                <select name="black_player" form="game_explorer_form">
+                {% for player in black_players %}       
+                    <option value="{{player.name}}" size="15">{{player.name}}</option>   
+                {% endfor %} 
+                </select>   
             </dd>
 
             <dt>ECO:</dt>
@@ -52,6 +52,7 @@
     </form>
     {% if entries %}
         <br>
+        <em>{{number_of_matches}} game(s) matched the search </em><br>
         <div class="entries">
             <table style="width:100%" class="entries">
                 <tr>
@@ -92,6 +93,23 @@
                 </tr>   
                 {% endfor %}   
             </table>
+        </div>
+        <div class=pagination>
+          {%- for page in pagination.iter_pages() %}
+            {% if page %}
+              {% if page != pagination.page %}
+                <a href="{{ url_for_other_page(page) }}">{{ page }}</a>
+              {% else %}
+                <strong>{{ page }}</strong>
+              {% endif %}
+            {% else %}
+              <span class=ellipsis>…</span>
+            {% endif %}
+          {%- endfor %}
+          {% if pagination.has_next %}
+            <a href="{{ url_for_other_page(pagination.page + 1)
+              }}">Next &raquo;</a>
+          {% endif %}
         </div>
     {% endif %}
 {% endblock %}
