--- a/ChessDBApp/templates/layout.html
+++ b/ChessDBApp/templates/layout.html
@@ -7,7 +7,7 @@
 </head>
 <body>
      <div class="metanav">
-      {% if not session.logged_in %}
+      {% if not current_user.is_authenticated() %}
         <a href="{{ url_for('login') }}">log in</a>
         <a href="{{ url_for('register') }}">register</a>
       {% else %}
