--- a/ChessDBApp/templates/collection_explorer.html
+++ b/ChessDBApp/templates/collection_explorer.html
@@ -3,7 +3,7 @@
     <h2>Your Collections</h2>
     <form action="{{ url_for('collection_explorer') }}" method="post">
         <dl>
-            <dt>Collection name:
+            <dt>Collection name:</dt>
             <dd><input type="text" name="cname" maxlength="50" size="50" required>
             <dt>Description:
             <dd><textarea name="description" rows="5" cols="40" maxlength="150"></textarea>
