--- a/ChessDBApp/templates/login.html
+++ b/ChessDBApp/templates/login.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 
+    <div class="metanav">
+        <a href="{{ url_for('register') }}">register</a>
+    </div>
+
     <h1>ChessDB</h1>
 
     <div class="nav">
