--- a/ChessDBApp/templates/pgn_viewer.html
+++ b/ChessDBApp/templates/pgn_viewer.html
@@ -17,7 +17,8 @@
 document.writeln("</td></tr></table></FORM>");
 Init('');
 AllowRecording(false);
-RotateBoard(true);
+RotateBoard(false);
+document.writeln("<form><input type=checkbox name='rotated' value=1 onClick='javascript:RotateBoard(this.checked)'>rotate board</form>")
 ApplyPgnMoveText("{{game.move_list}}");
 AddText("</td><td>"+"<H3>{{game.White}} vs. {{game.Black}}</H3>"+GetHTMLMoveText(0,0,1));
 document.writeln("</td></tr></table>");
@@ -26,325 +27,6 @@
 document.onkeydown = KeyDown;
 </script>
 {% if current_user.is_authenticated() %}
-<div class="AddToCollection">
-	
-	 <form action="{{ url_for('add_to_collection') }}" id="addToCollectionForm" method="post">
-	 	<fieldset>
-	 	<legend>Add this game to:</legend>
-		<select name=cid form="addToCollectionForm">
-		{% for collection in collections %}       
-			<option value={{collection.cid}}> {{collection.cname|safe}}</option>"   
-	    {% endfor %} 
-	    </select>	
-	    <input type="number" name="gid" value="{{game.gid}}" hidden>
-        <input type="text" name="label" placeholder="optional label (max 80 chars)" maxlength=80 size=100>
-        <input type="submit" value="Add to Collection">
-        </fieldset>
-    </form>
-
-
-</div>	
-{% endif %}
-
-{% endblock %}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-{% if session.logged_in %}
-=======
-{% if current_user.is_authenticated() %}
->>>>>>> aa0bc4ff5fac92ff528c8637825a6f78661922e7
 <div class="AddToCollection">
 	
 	 <form action="{{ url_for('add_to_collection') }}" id="addToCollectionForm" method="post">
@@ -360,7 +42,6 @@
 	    Label:
 	    <input type="text" name="label" placeholder="Optional label (80 chars max)" maxlength=80 size=80 >
 	    <input type="number" name="gid" value="{{game.gid}}" hidden>
-        <input type="text" name="label" placeholder="optional label (max 80 chars)" maxlength=80 size=100>
         <input type="submit" value="Add to Collection">
         {% else %}
         <em>
