--- a/ChessDBApp/static/style.css
+++ b/ChessDBApp/static/style.css
@@ -4,14 +4,14 @@ h1, h2, h3      { font-family: 'Georgia', serif; margin: 0; }
 h1              { border-bottom: 2px solid #eee; }
 h2              { font-size: 1.2em; }
 
-ul.nav          { background:  white; margin: 3em auto; width: 90%;  border: 3px solid #ccc;
+.nav ul         { background:  white; margin: 3em auto; width: 90%;  border: 3px solid #ccc;
 	              list-style-type:none; padding: 0em 0.8em; overflow:hidden; }
-li.nav          { width:33%; float:left; }
-a:link.nav,
-a:visited.nav   { display:block; text-align:center;
+.nav li         { width:33%; float:left; }
+.nav a:link,
+.nav a:visited  { display:block; text-align:center;
                   padding:10px 10px 10px 10px; text-decoration:none; }
-a:hover.nav,
-a:active.nav    { font-weight:bold; padding:10px 10px 10px 10px; }
+.nav a:hover,
+.nav a:active   { color:#FFFFFF; background-color:#808080; font-weight:bold; padding:10px 10px 10px 10px; }
 
 .page           { margin: 2em auto; width: 90%; border: 5px solid #ccc;
                   padding: 0.8em; background: white; }
@@ -25,7 +25,8 @@ a:active.nav    { font-weight:bold; padding:10px 10px 10px 10px; }
 
 .metanav        { text-align: right; font-size: 0.9em; padding: 0.4em;
                   margin-bottom: 1em; background: #aaaaaa; }
-.metanav a      { padding:10px 10px 10px 10px; }
+.metanav a      { padding:10px 10px 10px 10px;  color: #377BA8; }
+.metanav a:hover{color:#FFFFFF; background-color:#808080}
 
 .flash          { background: #CEE5F5; padding: 0.5em;
                   border: 1px solid #AACBE2; }
@@ -37,3 +38,4 @@ a:active.nav    { font-weight:bold; padding:10px 10px 10px 10px; }
 .entries td     { border: 1px solid black; border-collapse: collapse; }
 .entries th,
 .entries td     { padding: 5px; }
+
