--- a/ChessDBApp/templates/game_explorer.html
+++ b/ChessDBApp/templates/game_explorer.html
@@ -43,7 +43,7 @@
 
             <dt>ECO:</dt>
             <dd> 
-                <input type="text" name="eco" placeholder="A00-Z99" size="15"> 
+                <input type="text" name="eco" placeholder="A00-Z99" pattern="[A-Z][0-9]{2}" size="15"> 
             </dd>
 
             <dd><input type="submit" value="Find games">
