--- a/ChessDBApp/templates/pgn_viewer.html
+++ b/ChessDBApp/templates/pgn_viewer.html
@@ -46,7 +46,9 @@
         {% else %}
         <em>
         	It appears that you don't have any collections yet. 
-        	Please go to the <a href={{url_for('collection_explorer') }}>Collection Explorer </a> page to create some collections.
+        	Please go to the 
+        	<a href={{url_for('collection_explorer') }} style="color: #377BA8; text-decoration: underline; cursor: auto;">Collection Explorer </a> 
+        	page to create some collections.
         </em>
 
         {% endif %}
