--- a/ChessDBApp/static/style.css
+++ b/ChessDBApp/static/style.css
@@ -1,9 +1,3 @@
-body            { font-family: sans-serif; background: #eee; }
-a, h1, h2, h3   { color: #377BA8; }
-h1, h2, h3      { font-family: 'Georgia', serif; margin: 0; }
-h1              { border-bottom: 2px solid #eee; }
-h2              { font-size: 1.2em; }
-
 .nav ul         { background:  white; margin: 3em auto; width: 90%;  border: 3px solid #ccc;
 	              list-style-type:none; padding: 0em 0.8em; overflow:hidden; }
 .nav li         { width:33%; float:left; }
@@ -39,3 +33,13 @@ h2              { font-size: 1.2em; }
 .entries th,
 .entries td     { padding: 5px; }
 
+.tag            { color: #3e6d8e; background-color: #e0eaf1; border-bottom: 1px solid #b3cee1;
+                  border-right: 1px solid #b3cee1; padding: 3px 4px 3px 4px; margin: 2px 2px 2px 0; 
+                  text-decoration: none; font-size: 90%; line-height: 1.4; white-space: nowrap;
+                  display: inline-block; }
+
+body            { font-family: sans-serif; background: #eee; }
+a, h1, h2, h3   { color: #377BA8; }
+h1, h2, h3      { font-family: 'Georgia', serif; margin: 0; }
+th              { background: #ccc; }
+h1              { border-bottom: 2px solid #eee; }                  
