--- a/ChessDBApp/templates/opening_explorer.html
+++ b/ChessDBApp/templates/opening_explorer.html
@@ -9,8 +9,8 @@
 
 {% block body %}
 <script language="JavaScript">
-document.writeln("<table border=0><tr><td></td><td><center><h1>Line Explorer</h1></center></td></tr>")
-document.writeln("<tr><td><FORM name=BoardForm><table border=0><tr><td>");
+document.writeln("<table border=0><tr><td><h2>Line Explorer</h2></br></td></tr>")
+document.writeln("<tr><td><fieldset><legend><b>Viewer</b></legend><FORM name=BoardForm><table border=0><tr><td>");
 if ((BGColor!="")&&(document.getElementsByTagName)) document.getElementsByTagName('BODY')[0].style.backgroundColor=BGColor;
 if (ImagePath!="") SetBorder(0);
 WriteBoard(1);
@@ -78,7 +78,7 @@ document.writeln(
 document.writeln("</td></tr></table><br>");
 document.writeln(
 '<fieldset>' +
-'<legend> <b>Associated Games</b> (Games which have the state shown in the viewer [random selection limited to 100 games] ): </legend> <br>' +
+'<legend> <b>Associated Games</b> (random selection of up to {{MAX_GAMES}} games with the state shown in the viewer): </legend> <br>' +
     '<div class="entries">' +
         '<table style="width:100%" class="entries">' +
             '<tr>' +
@@ -113,7 +113,7 @@ document.writeln(
                 '<td>{{ game.Event }}</td>' +
                 '<td>{{ game.Site }}</td>' +
                 '<td>{{ game.ECO }}</td>' +
-                '<td>{{ game.Opening }} ({{ game.Variation}})</td>' +
+                '<td>{{ game.Opening }} {% if game.Variation %}  ({{game.Variation}})  {%endif%} </td>' +
                 '<td>{{ game.Round }}</td>' +
                 '<td>{{ game.Result }}</td>' +
                 '<td>{{ game.number_of_moves }}</td>' +
