Changed to TestChessDB and fixed some bugs in the HTML

--- a/ChessDBApp/templates/collection_explorer.html
+++ b/ChessDBApp/templates/collection_explorer.html
@@ -8,7 +8,7 @@
             <dd><input type="text" name="cname" maxlength="50" size="65"  placeholder="Required collection name (50 chars max)" required>
             <dt>Description:
             <dd><textarea name="description" rows="5" cols="40"  style="width:385px; font-family:sans-serif" maxlength="150" 
-                          placeholder="Required collection description (150 chars max)"></textarea>
+                          placeholder="Optional collection description (150 chars max)"></textarea>
             <dt>Tag:
             <dd><input list="tags"  name="tag" maxlength="20" size="30" placeholder="Optional tag (20 chars max)">
               <datalist id="tags">
