--- a/ChessDBApp/templates/register.html
+++ b/ChessDBApp/templates/register.html
@@ -12,7 +12,7 @@
     <div class="nav">
       <ul class="nav">
         <li class="nav"><a  class="nav" href = "{{ url_for('game_explorer') }}"><h3>Game Explorer</h3></a>
-        <li class="nav"><a  class="nav" href = "{{ url_for('opening_explorer') }}"><h3>Opening Explorer</h3></a>
+        <li class="nav"><a  class="nav" href = "{{ url_for('opening_explorer') }}"><h3>Line Explorer</h3></a>
         <li class="nav"><a  class="nav"href = "{{ url_for('collection_explorer') }}"><h3>Collection Explorer</h3></a>
       </ul>
     </div> 
